[package]
name = "headers"
version = "0.4.0" # don't forget to update html_root_url
description = "typed HTTP headers"
license = "MIT"
readme = "README.md"
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/headers"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "headers", "hyper", "hyperium"]
categories = ["web-programming"]
rust-version = "1.56"

[workspace]
members = [
    "./",
    "headers-core",
]

[dependencies]
http = "1.0.0"
headers-core = { version = "0.3", path = "./headers-core" }
base64 = "0.22"
bytes = "1"
language-tags = "0.3"
mime = "0.3.14"
sha1 = "0.10"
httpdate = "1"

[features]
nightly = []
